[dyad] wrote 6 file(s)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -68,5 +68,24 @@
   "points": "POINTS",
   "status": "STATUS",
   "no_appointments_found": "No appointments found for this date.",
-  "payment_pending": "Payment pending"
+  "payment_pending": "Payment pending",
+  "registration": "Registration",
+  "clients": "Clients",
+  "client_registration_title": "Client Registration",
+  "client_registration_name_label": "First Name",
+  "client_registration_name_placeholder": "Client's first name",
+  "client_registration_lastname_label": "Last Name",
+  "client_registration_lastname_placeholder": "Client's last name",
+  "client_registration_email_label": "Email",
+  "client_registration_email_placeholder": "email@example.com",
+  "client_registration_phone_label": "Phone",
+  "client_registration_phone_placeholder": "(XX) XXXXX-XXXX",
+  "client_registration_dob_label": "Date of Birth",
+  "client_registration_dob_select_placeholder": "Select a date",
+  "client_registration_avatar_label": "Avatar URL",
+  "client_registration_avatar_placeholder": "https://example.com/avatar.jpg",
+  "client_registration_submit_button": "Register Client",
+  "client_registration_success": "Client registered successfully!",
+  "client_registration_error": "Error registering client: ",
+  "unauthenticated_user_error": "Unauthenticated user."
 }
