--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -68,5 +68,24 @@
   "points": "PUNTOS",
   "status": "ESTADO",
   "no_appointments_found": "No se encontraron citas para esta fecha.",
-  "payment_pending": "Pago pendiente"
+  "payment_pending": "Pago pendiente",
+  "registration": "Registro",
+  "clients": "Clientes",
+  "client_registration_title": "Registro de Clientes",
+  "client_registration_name_label": "Nombre",
+  "client_registration_name_placeholder": "Nombre del cliente",
+  "client_registration_lastname_label": "Apellido",
+  "client_registration_lastname_placeholder": "Apellido del cliente",
+  "client_registration_email_label": "Correo electrónico",
+  "client_registration_email_placeholder": "correo@ejemplo.com",
+  "client_registration_phone_label": "Teléfono",
+  "client_registration_phone_placeholder": "(XX) XXXXX-XXXX",
+  "client_registration_dob_label": "Fecha de Nacimiento",
+  "client_registration_dob_select_placeholder": "Selecciona una fecha",
+  "client_registration_avatar_label": "URL del Avatar",
+  "client_registration_avatar_placeholder": "https://ejemplo.com/avatar.jpg",
+  "client_registration_submit_button": "Registrar Cliente",
+  "client_registration_success": "¡Cliente registrado exitosamente!",
+  "client_registration_error": "Error al registrar cliente: ",
+  "unauthenticated_user_error": "Usuario no autenticado."
 }
