--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -68,5 +68,24 @@
   "points": "PONTOS",
   "status": "STATUS",
   "no_appointments_found": "Nenhum agendamento encontrado para esta data.",
-  "payment_pending": "Pagamento pendente"
+  "payment_pending": "Pagamento pendente",
+  "registration": "Cadastro",
+  "clients": "Clientes",
+  "client_registration_title": "Cadastro de Clientes",
+  "client_registration_name_label": "Nome",
+  "client_registration_name_placeholder": "Nome do cliente",
+  "client_registration_lastname_label": "Sobrenome",
+  "client_registration_lastname_placeholder": "Sobrenome do cliente",
+  "client_registration_email_label": "E-mail",
+  "client_registration_email_placeholder": "email@exemplo.com",
+  "client_registration_phone_label": "Telefone",
+  "client_registration_phone_placeholder": "(XX) XXXXX-XXXX",
+  "client_registration_dob_label": "Data de Nascimento",
+  "client_registration_dob_select_placeholder": "Selecione uma data",
+  "client_registration_avatar_label": "URL do Avatar",
+  "client_registration_avatar_placeholder": "https://exemplo.com/avatar.jpg",
+  "client_registration_submit_button": "Cadastrar Cliente",
+  "client_registration_success": "Cliente cadastrado com sucesso!",
+  "client_registration_error": "Erro ao cadastrar cliente: ",
+  "unauthenticated_user_error": "Usuário não autenticado."
 }
