[dyad] wrote 7 file(s), renamed 1 file(s), executed 1 SQL queries

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -87,5 +87,23 @@
   "client_registration_submit_button": "Register Client",
   "client_registration_success": "Client registered successfully!",
   "client_registration_error": "Error registering client: ",
-  "unauthenticated_user_error": "Unauthenticated user."
+  "unauthenticated_user_error": "Unauthenticated user.",
+  "customers_title": "Customers",
+  "add_customers_button": "Add Customers",
+  "send_notification_button": "Send notification",
+  "search_clients_placeholder": "Search by name, phone or email.",
+  "search_button": "Search",
+  "client_name_email_header": "NAME",
+  "client_phone_header": "CELLPHONE",
+  "client_birthdate_header": "BIRTH DATE",
+  "client_status_header": "STATUS",
+  "not_informed": "Not informed",
+  "client_status_active": "Active",
+  "client_status_blocked": "Blocked",
+  "loading_clients": "Loading clients...",
+  "no_clients_found": "No clients found.",
+  "fetch_clients_error": "Error fetching clients: ",
+  "client_status_label": "Status",
+  "client_status_placeholder": "Select status",
+  "cancel_button": "Cancel"
 }
