--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -87,5 +87,23 @@
   "client_registration_submit_button": "Registrar Cliente",
   "client_registration_success": "¡Cliente registrado exitosamente!",
   "client_registration_error": "Error al registrar cliente: ",
-  "unauthenticated_user_error": "Usuario no autenticado."
+  "unauthenticated_user_error": "Usuario no autenticado.",
+  "customers_title": "Clientes",
+  "add_customers_button": "Añadir Clientes",
+  "send_notification_button": "Enviar notificación",
+  "search_clients_placeholder": "Buscar por nombre, teléfono o correo electrónico.",
+  "search_button": "Buscar",
+  "client_name_email_header": "NOMBRE",
+  "client_phone_header": "TELÉFONO",
+  "client_birthdate_header": "FECHA DE NACIMIENTO",
+  "client_status_header": "ESTADO",
+  "not_informed": "No informado",
+  "client_status_active": "Activo",
+  "client_status_blocked": "Bloqueado",
+  "loading_clients": "Cargando clientes...",
+  "no_clients_found": "No se encontraron clientes.",
+  "fetch_clients_error": "Error al buscar clientes: ",
+  "client_status_label": "Estado",
+  "client_status_placeholder": "Seleccionar estado",
+  "cancel_button": "Cancelar"
 }
