--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -87,5 +87,23 @@
   "client_registration_submit_button": "Cadastrar Cliente",
   "client_registration_success": "Cliente cadastrado com sucesso!",
   "client_registration_error": "Erro ao cadastrar cliente: ",
-  "unauthenticated_user_error": "Usuário não autenticado."
+  "unauthenticated_user_error": "Usuário não autenticado.",
+  "customers_title": "Clientes",
+  "add_customers_button": "Adicionar Clientes",
+  "send_notification_button": "Enviar notificação",
+  "search_clients_placeholder": "Pesquise por nome, telefone ou email.",
+  "search_button": "Pesquisar",
+  "client_name_email_header": "NOME",
+  "client_phone_header": "CELULAR",
+  "client_birthdate_header": "DATA DE NASCIMENTO",
+  "client_status_header": "STATUS",
+  "not_informed": "Não informado",
+  "client_status_active": "Ativo",
+  "client_status_blocked": "Bloqueado",
+  "loading_clients": "Carregando clientes...",
+  "no_clients_found": "Nenhum cliente encontrado.",
+  "fetch_clients_error": "Erro ao buscar clientes: ",
+  "client_status_label": "Status",
+  "client_status_placeholder": "Selecione o status",
+  "cancel_button": "Cancelar"
 }
