[dyad] wrote 8 file(s), executed 1 SQL queries

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -35,7 +35,7 @@
   "this_week": "This Week",
   "last_week": "Last Week",
   "this_month": "This Month",
-  "last_month": "Last Month",
+  "last_month": "Month Past",
   "page_not_found": "Oops! Page not found",
   "return_to_home": "Return to Home",
   "hide_blocked_times": "Hide Blocked Times:",
@@ -105,5 +105,33 @@
   "fetch_clients_error": "Error fetching clients: ",
   "client_status_label": "Status",
   "client_status_placeholder": "Select status",
-  "cancel_button": "Cancel"
+  "cancel_button": "Cancel",
+  "team": "Team",
+  "team_title": "Team Management",
+  "add_team_member_button": "Add Team Member",
+  "search_team_members_placeholder": "Search by name, email or phone.",
+  "team_member_name_email_header": "NAME / EMAIL",
+  "team_member_phone_header": "PHONE",
+  "team_member_address_header": "ADDRESS",
+  "team_member_skills_header": "SKILLS",
+  "loading_team_members": "Loading team members...",
+  "no_team_members_found": "No team members found.",
+  "fetch_team_members_error": "Error fetching team members: ",
+  "team_member_registration_title": "Register Team Member",
+  "team_member_name_label": "Name",
+  "team_member_name_placeholder": "Team member's name",
+  "team_member_email_label": "Email",
+  "team_member_email_placeholder": "email@example.com",
+  "team_member_phone_label": "Phone",
+  "team_member_phone_placeholder": "(XX) XXXXX-XXXX",
+  "team_member_address_label": "Address",
+  "team_member_address_placeholder": "Team member's address",
+  "team_member_skills_label": "Skills (comma-separated)",
+  "team_member_skills_placeholder": "e.g., Haircut, Beard Trim, Shave",
+  "team_member_avatar_label": "Avatar URL",
+  "team_member_avatar_placeholder": "https://example.com/avatar.jpg",
+  "team_member_color_label": "Calendar Color",
+  "team_member_registration_submit_button": "Register Team Member",
+  "team_member_registration_success": "Team member registered successfully!",
+  "team_member_registration_error": "Error registering team member: "
 }
