--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -20,7 +20,7 @@
   "new_product_sale_feature_dev": "¡Funcionalidad \"Nueva venta de productos\" en desarrollo!",
   "new_appointment_feature_dev": "¡Funcionalidad \"Nueva cita\" en desarrollo!",
   "action_feature_dev": "¡Acción \"{{action}}\" en desarrollo!",
-  "view_call_client_feature_dev": "¡Funcionalidad \"Ver/Llamar Cliente\" en desarrollo!",
+  "view_call_client_feature_dev": "¡Funcionalidade \"Ver/Llamar Cliente\" en desarrollo!",
   "occupancy_rate": "Tasa de Ocupación",
   "average_ticket": "Ticket Promedio",
   "client_frequency": "Frecuencia de Clientes",
@@ -105,5 +105,33 @@
   "fetch_clients_error": "Error al buscar clientes: ",
   "client_status_label": "Estado",
   "client_status_placeholder": "Seleccionar estado",
-  "cancel_button": "Cancelar"
+  "cancel_button": "Cancelar",
+  "team": "Equipo",
+  "team_title": "Gestión de Equipo",
+  "add_team_member_button": "Añadir Miembro del Equipo",
+  "search_team_members_placeholder": "Buscar por nombre, correo electrónico o teléfono.",
+  "team_member_name_email_header": "NOMBRE / CORREO ELECTRÓNICO",
+  "team_member_phone_header": "TELÉFONO",
+  "team_member_address_header": "DIRECCIÓN",
+  "team_member_skills_header": "HABILIDADES",
+  "loading_team_members": "Cargando miembros del equipo...",
+  "no_team_members_found": "No se encontraron miembros del equipo.",
+  "fetch_team_members_error": "Error al buscar miembros del equipo: ",
+  "team_member_registration_title": "Registrar Miembro del Equipo",
+  "team_member_name_label": "Nombre",
+  "team_member_name_placeholder": "Nombre del miembro del equipo",
+  "team_member_email_label": "Correo electrónico",
+  "team_member_email_placeholder": "correo@ejemplo.com",
+  "team_member_phone_label": "Teléfono",
+  "team_member_phone_placeholder": "(XX) XXXXX-XXXX",
+  "team_member_address_label": "Dirección",
+  "team_member_address_placeholder": "Dirección del miembro del equipo",
+  "team_member_skills_label": "Habilidades (separadas por coma)",
+  "team_member_skills_placeholder": "Ej: Corte de Pelo, Barba, Afeitado",
+  "team_member_avatar_label": "URL del Avatar",
+  "team_member_avatar_placeholder": "https://ejemplo.com/avatar.jpg",
+  "team_member_color_label": "Color en el Calendario",
+  "team_member_registration_submit_button": "Registrar Miembro del Equipo",
+  "team_member_registration_success": "¡Miembro del equipo registrado exitosamente!",
+  "team_member_registration_error": "Error al registrar miembro del equipo: "
 }
