--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -105,5 +105,33 @@
   "fetch_clients_error": "Erro ao buscar clientes: ",
   "client_status_label": "Status",
   "client_status_placeholder": "Selecione o status",
-  "cancel_button": "Cancelar"
+  "cancel_button": "Cancelar",
+  "team": "Equipe",
+  "team_title": "Gestão de Equipe",
+  "add_team_member_button": "Adicionar Membro da Equipe",
+  "search_team_members_placeholder": "Pesquise por nome, email ou telefone.",
+  "team_member_name_email_header": "NOME / EMAIL",
+  "team_member_phone_header": "TELEFONE",
+  "team_member_address_header": "ENDEREÇO",
+  "team_member_skills_header": "HABILIDADES",
+  "loading_team_members": "Carregando membros da equipe...",
+  "no_team_members_found": "Nenhum membro da equipe encontrado.",
+  "fetch_team_members_error": "Erro ao buscar membros da equipe: ",
+  "team_member_registration_title": "Cadastrar Membro da Equipe",
+  "team_member_name_label": "Nome",
+  "team_member_name_placeholder": "Nome do membro da equipe",
+  "team_member_email_label": "E-mail",
+  "team_member_email_placeholder": "email@exemplo.com",
+  "team_member_phone_label": "Telefone",
+  "team_member_phone_placeholder": "(XX) XXXXX-XXXX",
+  "team_member_address_label": "Endereço",
+  "team_member_address_placeholder": "Endereço do membro da equipe",
+  "team_member_skills_label": "Habilidades (separadas por vírgula)",
+  "team_member_skills_placeholder": "Ex: Corte de Cabelo, Barba, Pigmentação",
+  "team_member_avatar_label": "URL do Avatar",
+  "team_member_avatar_placeholder": "https://exemplo.com/avatar.jpg",
+  "team_member_color_label": "Cor no Calendário",
+  "team_member_registration_submit_button": "Cadastrar Membro da Equipe",
+  "team_member_registration_success": "Membro da equipe cadastrado com sucesso!",
+  "team_member_registration_error": "Erro ao cadastrar membro da equipe: "
 }
