[dyad] wrote 8 file(s), executed 1 SQL queries

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -133,5 +133,49 @@
   "team_member_color_label": "Calendar Color",
   "team_member_registration_submit_button": "Register Team Member",
   "team_member_registration_success": "Team member registered successfully!",
-  "team_member_registration_error": "Error registering team member: "
+  "team_member_registration_error": "Error registering team member: ",
+  "services": "Services",
+  "services_title": "Service Management",
+  "add_service_button": "Add Service",
+  "order_by_label": "Order by:",
+  "order_by_manual": "Manual",
+  "category_label": "Category:",
+  "category_all": "All",
+  "search_by_name_placeholder": "Search by name",
+  "service_order_header": "ORDER",
+  "service_name_header": "NAME",
+  "service_value_header": "VALUE",
+  "service_time_header": "TIME",
+  "service_visible_clients_header": "VISIBLE P/ CLIENTS",
+  "service_type_header": "TYPE",
+  "service_category_header": "CATEGORY",
+  "service_registration_title": "Service Registration",
+  "service_name_label": "Service Name",
+  "service_name_placeholder": "e.g., Haircut",
+  "service_description_label": "Description",
+  "service_description_placeholder": "Brief description of the service",
+  "service_price_label": "Price",
+  "service_price_placeholder": "e.g., 50.00",
+  "service_duration_label": "Duration (minutes)",
+  "service_duration_placeholder": "e.g., 30",
+  "service_visible_clients_label": "Visible to Clients",
+  "service_type_label": "Type",
+  "service_type_placeholder": "Select type",
+  "service_category_label": "Category",
+  "service_category_placeholder": "Select category",
+  "service_registration_submit_button": "Register Service",
+  "service_registration_success": "Service registered successfully!",
+  "service_registration_error": "Error registering service: ",
+  "loading_services": "Loading services...",
+  "no_services_found": "No services found.",
+  "fetch_services_error": "Error fetching services: ",
+  "yes": "Yes",
+  "no": "No",
+  "minutes_short": "min",
+  "service_type_normal": "Normal",
+  "service_type_subscription": "Subscription",
+  "service_category_haircut": "Haircut Services",
+  "service_category_beard": "Beard Services",
+  "service_category_finish": "Finishing Services",
+  "service_category_other": "Other Services"
 }
