--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -20,7 +20,7 @@
   "new_product_sale_feature_dev": "¡Funcionalidad \"Nueva venta de productos\" en desarrollo!",
   "new_appointment_feature_dev": "¡Funcionalidad \"Nueva cita\" en desarrollo!",
   "action_feature_dev": "¡Acción \"{{action}}\" en desarrollo!",
-  "view_call_client_feature_dev": "¡Funcionalidade \"Ver/Llamar Cliente\" en desarrollo!",
+  "view_call_client_feature_dev": "¡Funcionalidad \"Ver/Llamar Cliente\" en desarrollo!",
   "occupancy_rate": "Tasa de Ocupación",
   "average_ticket": "Ticket Promedio",
   "client_frequency": "Frecuencia de Clientes",
@@ -130,8 +130,52 @@
   "team_member_skills_placeholder": "Ej: Corte de Pelo, Barba, Afeitado",
   "team_member_avatar_label": "URL del Avatar",
   "team_member_avatar_placeholder": "https://ejemplo.com/avatar.jpg",
-  "team_member_color_label": "Color en el Calendario",
+  "team_member_color_label": "Color en el Calendário",
   "team_member_registration_submit_button": "Registrar Miembro del Equipo",
   "team_member_registration_success": "¡Miembro del equipo registrado exitosamente!",
-  "team_member_registration_error": "Error al registrar miembro del equipo: "
+  "team_member_registration_error": "Error al registrar miembro del equipo: ",
+  "services": "Servicios",
+  "services_title": "Gestión de Servicios",
+  "add_service_button": "Añadir Servicio",
+  "order_by_label": "Ordenar por:",
+  "order_by_manual": "Manualmente",
+  "category_label": "Categoría:",
+  "category_all": "Todos",
+  "search_by_name_placeholder": "Buscar por nombre",
+  "service_order_header": "ORDENAR",
+  "service_name_header": "NOMBRE",
+  "service_value_header": "VALOR",
+  "service_time_header": "TIEMPO",
+  "service_visible_clients_header": "VISIBLE P/ CLIENTES",
+  "service_type_header": "TIPO",
+  "service_category_header": "CATEGORÍA",
+  "service_registration_title": "Registro de Servicio",
+  "service_name_label": "Nombre del Servicio",
+  "service_name_placeholder": "Ej: Corte de Pelo",
+  "service_description_label": "Descripción",
+  "service_description_placeholder": "Breve descripción del servicio",
+  "service_price_label": "Precio",
+  "service_price_placeholder": "Ej: 50.00",
+  "service_duration_label": "Duración (minutos)",
+  "service_duration_placeholder": "Ej: 30",
+  "service_visible_clients_label": "Visible para Clientes",
+  "service_type_label": "Tipo",
+  "service_type_placeholder": "Seleccionar tipo",
+  "service_category_label": "Categoría",
+  "service_category_placeholder": "Seleccionar categoría",
+  "service_registration_submit_button": "Registrar Servicio",
+  "service_registration_success": "¡Servicio registrado exitosamente!",
+  "service_registration_error": "Error al registrar servicio: ",
+  "loading_services": "Cargando servicios...",
+  "no_services_found": "No se encontraron servicios.",
+  "fetch_services_error": "Error al buscar servicios: ",
+  "yes": "Sí",
+  "no": "No",
+  "minutes_short": "min",
+  "service_type_normal": "Normal",
+  "service_type_subscription": "Suscripción",
+  "service_category_haircut": "Servicios de Corte",
+  "service_category_beard": "Servicios de Barba",
+  "service_category_finish": "Servicios de Acabado",
+  "service_category_other": "Otros Servicios"
 }
