--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -133,5 +133,49 @@
   "team_member_color_label": "Cor no Calendário",
   "team_member_registration_submit_button": "Cadastrar Membro da Equipe",
   "team_member_registration_success": "Membro da equipe cadastrado com sucesso!",
-  "team_member_registration_error": "Erro ao cadastrar membro da equipe: "
+  "team_member_registration_error": "Erro ao cadastrar membro da equipe: ",
+  "services": "Serviços",
+  "services_title": "Gestão de Serviços",
+  "add_service_button": "Adicionar Serviço",
+  "order_by_label": "Ordenar:",
+  "order_by_manual": "Manualmente",
+  "category_label": "Categoria:",
+  "category_all": "Todos",
+  "search_by_name_placeholder": "Pesquise por nome",
+  "service_order_header": "ORDENAR",
+  "service_name_header": "NOME",
+  "service_value_header": "VALOR",
+  "service_time_header": "TEMPO",
+  "service_visible_clients_header": "VISÍVEL P/ CLIENTES",
+  "service_type_header": "TIPO",
+  "service_category_header": "CATEGORIA",
+  "service_registration_title": "Cadastro de Serviço",
+  "service_name_label": "Nome do Serviço",
+  "service_name_placeholder": "Ex: Corte de Cabelo",
+  "service_description_label": "Descrição",
+  "service_description_placeholder": "Breve descrição do serviço",
+  "service_price_label": "Preço",
+  "service_price_placeholder": "Ex: 50.00",
+  "service_duration_label": "Duração (minutos)",
+  "service_duration_placeholder": "Ex: 30",
+  "service_visible_clients_label": "Visível para Clientes",
+  "service_type_label": "Tipo",
+  "service_type_placeholder": "Selecione o tipo",
+  "service_category_label": "Categoria",
+  "service_category_placeholder": "Selecione a categoria",
+  "service_registration_submit_button": "Cadastrar Serviço",
+  "service_registration_success": "Serviço cadastrado com sucesso!",
+  "service_registration_error": "Erro ao cadastrar serviço: ",
+  "loading_services": "Carregando serviços...",
+  "no_services_found": "Nenhum serviço encontrado.",
+  "fetch_services_error": "Erro ao buscar serviços: ",
+  "yes": "Sim",
+  "no": "Não",
+  "minutes_short": "min",
+  "service_type_normal": "Normal",
+  "service_type_subscription": "Assinatura",
+  "service_category_haircut": "Serviços de Corte",
+  "service_category_beard": "Serviços de Barba",
+  "service_category_finish": "Serviços de Acabamento",
+  "service_category_other": "Outros Serviços"
 }
