[dyad] wrote 8 file(s), executed 1 SQL queries

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -177,5 +177,43 @@
   "service_category_haircut": "Haircut Services",
   "service_category_beard": "Beard Services",
   "service_category_finish": "Finishing Services",
-  "service_category_other": "Other Services"
+  "service_category_other": "Other Services",
+  "products": "Products",
+  "products_title": "Product Management",
+  "add_product_button": "Add New Product",
+  "filter_by_producer_label": "Filter by Producer",
+  "all_producers": "All",
+  "filter_by_product_name_placeholder": "Product name",
+  "product_name_header": "NAME",
+  "product_sale_price_header": "SALE PRICE",
+  "product_cost_price_header": "COST PRICE",
+  "product_producer_header": "PRODUCER",
+  "product_type_header": "TYPE",
+  "product_stock_quantity_header": "QUANTITY IN STOCK",
+  "loading_products": "Loading products...",
+  "no_products_found": "No products found.",
+  "fetch_products_error": "Error fetching products: ",
+  "product_registration_title": "Product Registration",
+  "product_name_label": "Product Name",
+  "product_name_placeholder": "e.g., Hair Gel",
+  "product_description_label": "Description",
+  "product_description_placeholder": "Brief description of the product",
+  "product_sale_price_label": "Sale Price",
+  "product_sale_price_placeholder": "e.g., 100.00",
+  "product_cost_price_label": "Cost Price",
+  "product_cost_price_placeholder": "e.g., 35.00",
+  "product_producer_label": "Producer",
+  "product_producer_placeholder": "e.g., Black White",
+  "product_stock_quantity_label": "Quantity in Stock",
+  "product_stock_quantity_placeholder": "e.g., 10",
+  "product_type_label": "Product Type",
+  "product_type_placeholder": "Select type",
+  "product_type_vitrine": "Showcase",
+  "product_type_internal_stock": "Internal Stock",
+  "product_type_other": "Other",
+  "product_image_url_label": "Image URL",
+  "product_image_url_placeholder": "https://example.com/product.jpg",
+  "product_registration_submit_button": "Register Product",
+  "product_registration_success": "Product registered successfully!",
+  "product_registration_error": "Error registering product: "
 }
