--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -177,5 +177,43 @@
   "service_category_haircut": "Servicios de Corte",
   "service_category_beard": "Servicios de Barba",
   "service_category_finish": "Servicios de Acabado",
-  "service_category_other": "Otros Servicios"
+  "service_category_other": "Otros Servicios",
+  "products": "Productos",
+  "products_title": "Gestión de Productos",
+  "add_product_button": "Añadir Nuevo Producto",
+  "filter_by_producer_label": "Filtrar por fabricante",
+  "all_producers": "Todos",
+  "filter_by_product_name_placeholder": "Nombre del producto",
+  "product_name_header": "NOMBRE",
+  "product_sale_price_header": "PRECIO DE VENTA",
+  "product_cost_price_header": "PRECIO DE COSTO",
+  "product_producer_header": "FABRICANTE",
+  "product_type_header": "TIPO",
+  "product_stock_quantity_header": "CANTIDAD EN STOCK",
+  "loading_products": "Cargando productos...",
+  "no_products_found": "No se encontraron productos.",
+  "fetch_products_error": "Error al buscar productos: ",
+  "product_registration_title": "Registro de Producto",
+  "product_name_label": "Nombre del Producto",
+  "product_name_placeholder": "Ej: Gel para el Cabello",
+  "product_description_label": "Descripción",
+  "product_description_placeholder": "Breve descripción del producto",
+  "product_sale_price_label": "Precio de Venta",
+  "product_sale_price_placeholder": "Ej: 100.00",
+  "product_cost_price_label": "Precio de Costo",
+  "product_cost_price_placeholder": "Ej: 35.00",
+  "product_producer_label": "Fabricante",
+  "product_producer_placeholder": "Ej: Black White",
+  "product_stock_quantity_label": "Cantidad en Stock",
+  "product_stock_quantity_placeholder": "Ej: 10",
+  "product_type_label": "Tipo de Producto",
+  "product_type_placeholder": "Seleccionar tipo",
+  "product_type_vitrine": "Escaparate",
+  "product_type_internal_stock": "Stock Interno",
+  "product_type_other": "Otros",
+  "product_image_url_label": "URL de la Imagen",
+  "product_image_url_placeholder": "https://ejemplo.com/producto.jpg",
+  "product_registration_submit_button": "Registrar Producto",
+  "product_registration_success": "¡Producto registrado exitosamente!",
+  "product_registration_error": "Error al registrar producto: "
 }
