--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -177,5 +177,43 @@
   "service_category_haircut": "Serviços de Corte",
   "service_category_beard": "Serviços de Barba",
   "service_category_finish": "Serviços de Acabamento",
-  "service_category_other": "Outros Serviços"
+  "service_category_other": "Outros Serviços",
+  "products": "Produtos",
+  "products_title": "Gestão de Produtos",
+  "add_product_button": "Cadastrar Novo Produto",
+  "filter_by_producer_label": "Filtrar por fabricante",
+  "all_producers": "Todos",
+  "filter_by_product_name_placeholder": "Nome do produto",
+  "product_name_header": "NOME",
+  "product_sale_price_header": "PREÇO DE VENDA",
+  "product_cost_price_header": "PREÇO DE CUSTO",
+  "product_producer_header": "FABRICANTE",
+  "product_type_header": "TIPO",
+  "product_stock_quantity_header": "QUANTIDADE EM ESTOQUE",
+  "loading_products": "Carregando produtos...",
+  "no_products_found": "Nenhum produto encontrado.",
+  "fetch_products_error": "Erro ao buscar produtos: ",
+  "product_registration_title": "Cadastro de Produto",
+  "product_name_label": "Nome do Produto",
+  "product_name_placeholder": "Ex: Gel de Cabelo",
+  "product_description_label": "Descrição",
+  "product_description_placeholder": "Breve descrição do produto",
+  "product_sale_price_label": "Preço de Venda",
+  "product_sale_price_placeholder": "Ex: 100.00",
+  "product_cost_price_label": "Preço de Custo",
+  "product_cost_price_placeholder": "Ex: 35.00",
+  "product_producer_label": "Fabricante",
+  "product_producer_placeholder": "Ex: Black White",
+  "product_stock_quantity_label": "Quantidade em Estoque",
+  "product_stock_quantity_placeholder": "Ex: 10",
+  "product_type_label": "Tipo de Produto",
+  "product_type_placeholder": "Selecione o tipo",
+  "product_type_vitrine": "Vitrine",
+  "product_type_internal_stock": "Estoque interno",
+  "product_type_other": "Outros",
+  "product_image_url_label": "URL da Imagem",
+  "product_image_url_placeholder": "https://exemplo.com/produto.jpg",
+  "product_registration_submit_button": "Cadastrar Produto",
+  "product_registration_success": "Produto cadastrado com sucesso!",
+  "product_registration_error": "Erro ao cadastrar produto: "
 }
