[dyad] wrote 8 file(s), executed 1 SQL queries

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -215,5 +215,27 @@
   "product_image_url_placeholder": "https://example.com/product.jpg",
   "product_registration_submit_button": "Register Product",
   "product_registration_success": "Product registered successfully!",
-  "product_registration_error": "Error registering product: "
+  "product_registration_error": "Error registering product: ",
+  "payment_methods": "Payment Methods",
+  "payment_methods_title": "Payment Methods",
+  "add_payment_method_button": "Add Payment Method",
+  "payment_method_name_header": "NAME",
+  "payment_method_percentage_header": "PERCENTAGE",
+  "payment_method_receipt_days_header": "RECEIPT (IN DAYS)",
+  "payment_method_take_out_header": "TAKE IT OUT OF THE BARBER SHOP",
+  "loading_payment_methods": "Loading payment methods...",
+  "no_payment_methods_found": "No payment methods found.",
+  "fetch_payment_methods_error": "Error fetching payment methods: ",
+  "payment_method_registration_title": "Payment Method Registration",
+  "payment_method_name_label": "Payment Method Name",
+  "payment_method_name_placeholder": "e.g., Credit Card - Visa",
+  "payment_method_percentage_label": "Percentage",
+  "payment_method_percentage_placeholder": "e.g., 2.50",
+  "payment_method_receipt_days_label": "Receipt in Days",
+  "payment_method_receipt_days_placeholder": "e.g., 30",
+  "payment_method_take_out_label": "Take it out of the barbershop",
+  "payment_method_registration_submit_button": "Register Payment Method",
+  "payment_method_registration_success": "Payment method registered successfully!",
+  "payment_method_registration_error": "Error registering payment method: ",
+  "days_short": "days"
 }
