--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -215,5 +215,27 @@
   "product_image_url_placeholder": "https://exemplo.com/produto.jpg",
   "product_registration_submit_button": "Cadastrar Produto",
   "product_registration_success": "Produto cadastrado com sucesso!",
-  "product_registration_error": "Erro ao cadastrar produto: "
+  "product_registration_error": "Erro ao cadastrar produto: ",
+  "payment_methods": "Formas de Pagamento",
+  "payment_methods_title": "Formas de Pagamento",
+  "add_payment_method_button": "Adicionar Forma de Pagamento",
+  "payment_method_name_header": "NOME",
+  "payment_method_percentage_header": "PORCENTAGEM",
+  "payment_method_receipt_days_header": "RECEBIMENTO (EM DIAS)",
+  "payment_method_take_out_header": "RETIRAR DA BARBEARIA",
+  "loading_payment_methods": "Carregando formas de pagamento...",
+  "no_payment_methods_found": "Nenhuma forma de pagamento encontrada.",
+  "fetch_payment_methods_error": "Erro ao buscar formas de pagamento: ",
+  "payment_method_registration_title": "Cadastro de Forma de Pagamento",
+  "payment_method_name_label": "Nome da Forma de Pagamento",
+  "payment_method_name_placeholder": "Ex: Cartão de Crédito - Visa",
+  "payment_method_percentage_label": "Porcentagem",
+  "payment_method_percentage_placeholder": "Ex: 2.50",
+  "payment_method_receipt_days_label": "Recebimento em Dias",
+  "payment_method_receipt_days_placeholder": "Ex: 30",
+  "payment_method_take_out_label": "Retirar da Barbearia",
+  "payment_method_registration_submit_button": "Cadastrar Forma de Pagamento",
+  "payment_method_registration_success": "Forma de pagamento cadastrada com sucesso!",
+  "payment_method_registration_error": "Erro ao cadastrar forma de pagamento: ",
+  "days_short": "dias"
 }
