[dyad] wrote 8 file(s), executed 1 SQL queries

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -237,5 +237,43 @@
   "payment_method_registration_submit_button": "Register Payment Method",
   "payment_method_registration_success": "Payment method registered successfully!",
   "payment_method_registration_error": "Error registering payment method: ",
-  "days_short": "days"
+  "days_short": "days",
+  "blocked_times": "Blocked Times",
+  "blocked_times_title": "Blocked Times Management",
+  "add_blocked_time_button": "Add Blocked Time",
+  "search_blocked_times_placeholder": "Search by technician or reason",
+  "blocked_time_technician_header": "TECHNICIAN",
+  "blocked_time_date_header": "DATE",
+  "blocked_time_time_header": "TIME",
+  "blocked_time_reason_header": "REASON",
+  "blocked_time_recurring_header": "RECURRING",
+  "loading_blocked_times": "Loading blocked times...",
+  "no_blocked_times_found": "No blocked times found.",
+  "no_blocked_times_found_search": "No blocked times match your search.",
+  "blocked_time_registration_title": "Register Blocked Time",
+  "blocked_time_edit_title": "Edit Blocked Time",
+  "blocked_time_technician_label": "Technician",
+  "blocked_time_technician_placeholder": "Select a technician",
+  "blocked_time_start_date_label": "Start Date",
+  "blocked_time_start_time_label": "Start Time",
+  "blocked_time_end_date_label": "End Date",
+  "blocked_time_end_time_label": "End Time",
+  "blocked_time_reason_label": "Reason",
+  "blocked_time_reason_placeholder": "e.g., Vacation, Meeting",
+  "blocked_time_recurring_label": "Recurring",
+  "blocked_time_registration_submit_button": "Register Blocked Time",
+  "blocked_time_update_submit_button": "Update Blocked Time",
+  "blocked_time_registration_success": "Blocked time registered successfully!",
+  "blocked_time_update_success": "Blocked time updated successfully!",
+  "blocked_time_registration_error": "Error registering blocked time: ",
+  "blocked_time_update_error": "Error updating blocked time: ",
+  "blocked_time_delete_success": "Blocked time deleted successfully!",
+  "blocked_time_delete_error": "Error deleting blocked time: ",
+  "fetch_blocked_times_error": "Error fetching blocked times: ",
+  "confirm_delete_title": "Are you sure?",
+  "confirm_delete_blocked_time_description": "This action cannot be undone. This will permanently delete the blocked time.",
+  "delete_button": "Delete",
+  "blocked_time_recurring": "Recurring",
+  "blocked_time_one_time": "One Time",
+  "unknown_technician": "Unknown Technician"
 }
