--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -237,5 +237,43 @@
   "payment_method_registration_submit_button": "Cadastrar Forma de Pagamento",
   "payment_method_registration_success": "Forma de pagamento cadastrada com sucesso!",
   "payment_method_registration_error": "Erro ao cadastrar forma de pagamento: ",
-  "days_short": "dias"
+  "days_short": "dias",
+  "blocked_times": "Horas Bloqueadas",
+  "blocked_times_title": "Gestão de Horas Bloqueadas",
+  "add_blocked_time_button": "Adicionar Hora Bloqueada",
+  "search_blocked_times_placeholder": "Pesquise por barbeiro ou motivo",
+  "blocked_time_technician_header": "BARBEIRO",
+  "blocked_time_date_header": "DATA",
+  "blocked_time_time_header": "HORÁRIO",
+  "blocked_time_reason_header": "MOTIVO",
+  "blocked_time_recurring_header": "RECORRENTE",
+  "loading_blocked_times": "Carregando horas bloqueadas...",
+  "no_blocked_times_found": "Nenhuma hora bloqueada encontrada.",
+  "no_blocked_times_found_search": "Nenhuma hora bloqueada corresponde à sua pesquisa.",
+  "blocked_time_registration_title": "Cadastrar Hora Bloqueada",
+  "blocked_time_edit_title": "Editar Hora Bloqueada",
+  "blocked_time_technician_label": "Barbeiro",
+  "blocked_time_technician_placeholder": "Selecione um barbeiro",
+  "blocked_time_start_date_label": "Data de Início",
+  "blocked_time_start_time_label": "Hora de Início",
+  "blocked_time_end_date_label": "Data de Término",
+  "blocked_time_end_time_label": "Hora de Término",
+  "blocked_time_reason_label": "Motivo",
+  "blocked_time_reason_placeholder": "Ex: Férias, Reunião",
+  "blocked_time_recurring_label": "Recorrente",
+  "blocked_time_registration_submit_button": "Cadastrar Hora Bloqueada",
+  "blocked_time_update_submit_button": "Atualizar Hora Bloqueada",
+  "blocked_time_registration_success": "Hora bloqueada cadastrada com sucesso!",
+  "blocked_time_update_success": "Hora bloqueada atualizada com sucesso!",
+  "blocked_time_registration_error": "Erro ao cadastrar hora bloqueada: ",
+  "blocked_time_update_error": "Erro ao atualizar hora bloqueada: ",
+  "blocked_time_delete_success": "Hora bloqueada excluída com sucesso!",
+  "blocked_time_delete_error": "Erro ao excluir hora bloqueada: ",
+  "fetch_blocked_times_error": "Erro ao buscar horas bloqueadas: ",
+  "confirm_delete_title": "Tem certeza?",
+  "confirm_delete_blocked_time_description": "Esta ação não pode ser desfeita. Isso excluirá permanentemente a hora bloqueada.",
+  "delete_button": "Excluir",
+  "blocked_time_recurring": "Recorrente",
+  "blocked_time_one_time": "Única Vez",
+  "unknown_technician": "Barbeiro Desconhecido"
 }
